tests/unit/language/policy/errors/handler_sigil_mismatch.arche
// The sigil must match the policy kind: `!` is a panic policy (channel-less op: index/slice/divide),
// `?` is a pool overflow handler. `a[i] ?clamp` uses the handler sigil on a panic op -> error.
// RUN: %arche build -o %t %s > %t.out 2>&1 ; grep -qi "panic policy\|? marks a pool" %t.out
#import { os }
entry :: system {
  os.argc()(k:);
  a: [4]int;
  x := a[k] ?clamp; // handler sigil on a bounds op -> wrong sigil
  y := x + 0;
}

#run entry
